Setup basic TWS connection